# tb_workspace

./: .gitignore
blessed_plots/: DrawBlessedPlots.C  MakeBlessedPlots.C  MakeLengthComp.C  submit_blessing.cfg
caf/: CheckMagnetPolarity.C  MakeParticleProperties.C  cfg.fcl  cuts.C  prod_tb_cafmaker_job_local.fcl  r101852_newspillinfo_ana.txt  r101852_oldspillinfo_ana.txt  r101861_newspillinfo_ana.txt  r101861_oldspillinfo_ana.txt  run_caf.fcl  submit_caf.cfg
commissioning/: ToFAndWCRecoJob.fcl  beamlineoffline.fcl  cfg.fcl  rate_playing.C  testbeamoffline.fcl
cutflow/: p3cuts.C
deadtime/: badFEBvsTime.C  cfg.fcl  checkDeadTimeInfo.C  checkFiles.py  checkGridOutput.py  run_deadtime.fcl  run_filter.fcl  setup_running.sh  submit_deadtime.cfg  submit_filter.cfg
gan/: copy_to_wc.sh  default.conf  draw_generated.py  draw_pixelmaps.py  draw_training.py  evts_period3.txt  file_locations.txt  gan-mnist.py  gan-tb.py  gan_sim_sample.py  human-vs-machine.py  run_gen.fcl  train.py
gan/utils/: architecture.py  dataset.py  generator.py  model.py  parser.py
geom/: MakeGeomComparison.C  daw2raw.txt  storegdml.txt  submit_geom.cfg
hdf5/: cfg.fcl  readh5.py  run_hdf5_train.fcl
keepup/: MCenterDeviceMgr.h  drawSpillCounters.C  find_most_recent_processed_runs.sh  find_run_time.sh  get_definition_file_list.sh  list_recent_runs.sh  pull_device.py  run_tbrecoana.fcl  spillstreamanalocaljob.fcl  submit_spillana.cfg  sum_trigs.py  tbcounterjob.fcl
keepup/firstgen/: MCenterDeviceMgr.h  MCenterDeviceMgr_old.h  countSpillParticles.C  drawSpillCounters.C  drawSpillCounters_Scans.C  drawSpillCounters_old.C
pimu/: DrawPiMuPlots.C  MakePiMuPlots.C  cfg.fcl  evts_mu_period3.txt  evts_pi_period3.txt  filter_pi.py  pimu_ana_overlay.C  pimu_drawing.h  run_cafmaker.fcl  run_musim.fcl  run_overlay.fcl  run_pid.fcl  run_pid_overlay.fcl  run_pisim.fcl
prod/: declare_and_set_metadata.py  make_testbeam_defs.sh  prod_tb_beamline_pid_job.fcl  update_metadata.py
selection/: CMakeLists.txt  DrawSelectionComparison.C  MakeSelectionComparison.C  submit_selection.cfg  tof.C
shutoff/: r101150.list  r101209.list  r101250.list  r101300.list  r101349.list  r101401.list  r101450.list  run_shutoffana.fcl  run_shutoffhandscan.cfg  run_shutoffhandscan.fcl  run_tbdeadtime.fcl  validateTBDeadTime.C
sim/: beamline.py  cfg.fcl  event_generator.py  evts_period3.txt  filelist_1400-1483.txt  generate_hepevt.py  generate_hepevt_cosmic.py  generate_p3sim.C  merge_tree.py  plot_properties.py  plot_smear_properties.py  run_deadtime.fcl  run_filter.fcl  run_sim.fcl  run_simmerge.fcl  run_slicer.fcl  save_particle_to_root.py  smear_particles.py  text.py
tb_analysis/: AnalyzePeriod3CutFlow.C  AnalyzePolarity.C  BraggPeak.C  GetACNETData.py  GetMagnetPolarityData.py  MakePeriod3CutFlow.C  beam_ana.py  beamlinereco_commissioning.fcl  braggpeak_proton.C  caf_polarity.txt  caf_polarity_1853.txt  cfg.fcl  compareP3KeepUpAndProdReco.C  count_datasets.C  cutFlow.C  detgeo.txt  drawSlicerHits.C  evd.fcl  fetch_files.sh  format_plot_wceff.C  hit_time_ana.C  middleCellAna.C  p3deadtime.C  prod_tb_beamline_pid_job.fcl  prod_tb_sim_pid_slicerana_job.fcl  raw2root_commissioning.fcl  run_beamtriginfo.fcl  run_deadtime.fcl  run_slicer.fcl  runevd.fcl  runrawfile.fcl  runreco.fcl  slice_track_energy.C  submit_hough.cfg  submit_recovalid.cfg  submit_tbrecoana.cfg  submit_wcjitter.cfg  tbdetanajob.fcl  tbrecoplots.C  tbrecovalidationjob_tdslicer.fcl  (+3 more)
tb_analysis/plots/: event-list-all_to_date.txt  event-list-electron.txt  event-list-kaon.txt  event-list-other.txt  event-list-proton.txt
testarea/: cfg.fcl  demo0.C  prod_tb_bl_sim_pid_job.fcl  test  test.cxx
tutorial/: DrawParticleProperties.C
